Design And Optimization Commit : Fixed some hard coded sizing such as the sidebar. Fixed some issues concerning the long game title that could be too long for some games. Added compatibility for other browsers (future usage) Fully fixed reactivity for the library that was horrendous previously. Removed most event listeners for better optimizations. made the reload quicker because the user will probably just spam the save settings and it will break. Removed repetitive TODOs.

--- a/src/components/Gamehorizontal-01/Gamehorizontal.css
+++ b/src/components/Gamehorizontal-01/Gamehorizontal.css
@@ -1,7 +1,7 @@
 .horizontal-slide {
     bottom: 0;
     position: fixed;
-    width: calc(100% - 260px); /* Adjust to fit within screen width minus sidebar */
+    width: calc(100% - 17vw); /* Adjust to fit within screen width minus sidebar */
     background-color: rgba(34, 34, 36, 1);
     color: white;
     z-index: 10;
